2014-07-23  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/61396
	* config/rs6000/rs6000.c (paired_expand_vector_init): Only allow
	constant numbers, not general constants.
	(rs6000_expand_vector_init): Ditto.

2014-07-23  Nathan Sidwell  <nathan@acm.org>

	* gcov-tool.c (gcov_list): Declare here.
	(set_gcov_list): Remove.
	(gcov_output_files): Set gcov_list directly.

2014-07-23  Host Schirmeier  <horst@schirmeier.com>

	* doc/invoke.texi: -O3 enables -ftree-loop-distribute-patterns.

2014-07-23  Jiong Wang  <jiong.wang@arm.com>

	* config/arm/arm.c (arm_get_frame_offsets): If both r3 and other
	callee-saved registers are available for padding purpose
	and r3 is not mandatory, then prefer use those callee-saved
	instead of r3.

2014-07-23  Richard Biener  <rguenther@suse.de>

	* params.def (PARAM_MAX_COMBINE_INSNS): New.
	* combine.c: Include statistics.h and params.h.
	(combine_instructions): Guard three and four insn combines
	with max-combine-insns value.  Record statistics for combines
	performed.
	* doc/invoke.texi (max-combine-insns): Document new param.

2014-07-23  Roman Gareev  <gareevroman@gmail.com>

	* graphite-isl-ast-to-gimple.c:
	(translate_isl_ast_node_block): New function.
	(translate_isl_ast): Add calling of translate_isl_ast_node_block.

	testsuite/gcc.dg/graphite/
	* isl-ast-gen-blocks-1.c: New testcase.
	* isl-ast-gen-blocks-2.c: New testcase.

2014-07-23  Roman Gareev  <gareevroman@gmail.com>

	* graphite-isl-ast-to-gimple.c:
	(get_max_schedule_dimensions): New function.
	(extend_schedule): Likewise.
	(generate_isl_schedule): Add calling of extend_schedule and
	get_max_schedule_dimensions.

2014-07-22  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.c (aarch64_rtx_costs): Handle CLRSB, CLZ.
	(case UNSPEC): Handle UNSPEC_RBIT.

2014-07-22  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.md: Delete UNSPEC_CLS.
	(clrsb<mode>2): Use clrsb RTL code instead of UNSPEC_CLS.
